src/objects/acpl__Commercial_Plan_Event__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>GrowthDriver__r.Amount__c</formula>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asiggned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario asignado</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Plan_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientAssigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asignación de cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Plan Events (Asignación de cliente)</relationshipLabel>
        <relationshipName>Commercial_Plan_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrowthDriver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variable de crecimiento</label>
        <referenceTo>bupl__BP_GrowthDriver__c</referenceTo>
        <relationshipLabel>Commercial Plan Events</relationshipLabel>
        <relationshipName>Commercial_Plan_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>CASE(GrowthDriver__r.bupl__solution_category_desc__c, 
							&quot;0160010&quot;, &quot;Préstamo comercial CP (manual)&quot;, 
							&quot;0160010_NEW&quot;, &quot;Préstamo comercial CP&quot;,
							&quot;0161720&quot;, &quot;	Comex importación (manual)&quot;,
							&quot;0161720_NEW&quot;, &quot;Comex importación&quot;,
							&quot;0161710&quot;, &quot;Comex exportación (manual)&quot;,
							&quot;0161710_NEW&quot;, &quot;Comex exportación&quot;,
							&quot;0161730&quot;, &quot;Forfaiting&quot;,
							&quot;0159501&quot;, &quot;Letras (manual)&quot;,
							&quot;0159501_NEW&quot;, &quot;Letras&quot;,
							&quot;0159502&quot;, &quot;Factoring&quot;,
							&quot;PC00009&quot;, &quot;Préstamo comercial LP (manual)&quot;,
							&quot;PC00009_NEW&quot;, &quot;Préstamo comercial LP&quot;,
							&quot;0159601&quot;, &quot;	Leasing (manual)&quot;,
							&quot;0159601_NEW&quot;, &quot;Leasing&quot;,
							&quot;0292235&quot;, &quot;Carta fianza técnica (manual)&quot;,
							&quot;0292235_NEW&quot;, &quot;Carta fianza técnica&quot;,
							&quot;0292230&quot;, &quot;Carta fianza económica (manual)&quot;,
							&quot;0292230_NEW&quot;, &quot;Carta fianza económica&quot;,
							&quot;0292420&quot;, &quot;Stand by&quot;,
							&quot;0292410&quot;, &quot;Carta de crédito de importación&quot;,
							&quot;0292430&quot;, &quot;Carta de crédito de exportación&quot;,
							&quot;0240011&quot;, &quot;Vista PJ&quot;,
							&quot;0241041&quot;, &quot;Depósito a plazo&quot;,
							&quot;08&quot;, &quot;Pago a proveedores&quot;,
							&quot;09&quot;, &quot;Pago de haberes&quot;,
							&quot;21&quot;, &quot;Net Cash&quot;,
							&quot;PC00035&quot;, &quot;FX&quot;,
							&quot;PC00036&quot;, &quot;Forward&quot;,
							&quot;PC00040&quot;, &quot;PFL&quot;,
							&quot;PC00041&quot;, &quot;PFF&quot;,
							&quot;PC00042&quot;, &quot;PFA&quot;,
							&quot;&quot;)</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpl__customer_business_country_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_account_planning_id__c</fullName>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Commercial Plan Events</relationshipLabel>
        <relationshipName>Commercial_Plan_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_product_family_type_name__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_comm_plan_event_type_name__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Pitch</fullName>
                    <isActive>false</isActive>
                    <label>Pitch</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_event_date_Q__c</fullName>
        <formula>IF(
                    MONTH(acpl__gf_event_date__c) &lt; 4, &apos;1Q&apos; &amp; TEXT(YEAR(acpl__gf_event_date__c)),
                    IF(
                                MONTH(acpl__gf_event_date__c) &lt; 7, &apos;2Q&apos; &amp; TEXT(YEAR(acpl__gf_event_date__c)),
                                IF(
                                                MONTH(acpl__gf_event_date__c) &lt; 10, &apos;3Q&apos; &amp; TEXT(YEAR(acpl__gf_event_date__c)),
                                                &apos;4Q&apos; &amp; TEXT(YEAR(acpl__gf_event_date__c))
                                )
                )
)</formula>
        <label>Expected Completion Date Q</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpl__gf_event_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_event_date_formula__c</fullName>
        <formula>IF(acpl__gf_event_date__c &lt; TODAY(), &apos;Overdue &apos; &amp; TEXT(acpl__gf_event_date__c),
      TEXT(acpl__gf_event_date__c)
    )</formula>
        <label>Expected Completion Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpl__participant_id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial Plan Events</relationshipLabel>
        <relationshipName>Commercial_Plan_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Commercial Plan Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Commercial Plan Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Plan Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assign_Client_Group</fullName>
        <active>true</active>
        <description>Validación para asignar un cliente a una acción comercial perteneciente a un Grupo Económico</description>
        <errorConditionFormula>acpl__gf_account_planning_id__r.acpl__participant_id__r.RecordType.DeveloperName == &apos;Record_Type_Economic_Group&apos; &amp;&amp;
acpl__gf_account_planning_id__r.acpl__participant_id__c != ClientAssigned__r.ParentId</errorConditionFormula>
        <errorDisplayField>ClientAssigned__c</errorDisplayField>
        <errorMessage>Debe asignar la variable a un cliente del grupo económico.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>acpl__Expected_completion_date_TODAY</fullName>
        <active>false</active>
        <errorConditionFormula>acpl__gf_event_date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>acpl__gf_event_date__c</errorDisplayField>
        <errorMessage>The Expected Completion Date has to be greater or equal today</errorMessage>
    </validationRules>
</CustomObject>